<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvMakeItFav"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/tvMakeitFav"
            android:gravity="center_vertical"
            android:textSize="20dp"
            android:layout_weight="1.0"/>

        <Button
            android:id="@+id/btnFav"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="1.0" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow>

                <TextView
                    android:id="@+id/tvPlaceDetail_ratingLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvRatingLabel"
                    android:textSize="28sp"
                    android:padding="2dp"
                    />

                <TextView
                    android:id="@+id/tvPlaceDetail_ratingValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="28sp"
                    android:padding="2dp"
                    />

            </TableRow>

            <Space
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize" />

            <TableRow>

                <TextView
                    android:id="@+id/tvPlaceDetail_phoneLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvPhoneLabel"
                    android:textSize="28sp"
                    android:padding="2dp"/>

                <TextView
                    android:id="@+id/tvPlaceDetail_phoneValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="28sp"
                    android:textIsSelectable="true"
                    android:padding="2dp"    />

            </TableRow>

            <TableRow
                android:layout_width="match_parent">

                <TextView
                    android:id="@+id/tvPlaceDetail_addressLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvAddressLabel"
                    android:textSize="28sp"
                    android:padding="2dp"/>

                <TextView
                    android:id="@+id/tvPlaceDetail_addressValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="28sp"
                    android:textIsSelectable="true"
                    android:padding="2dp"  />

            </TableRow>

            <Space
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize" />



            <TextView
                android:id="@+id/tvPlaceDetail_websiteLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvWebsiteLabel"
                android:textSize="28sp"
                android:padding="2dp"/>

            <TextView
                android:id="@+id/tvPlaceDetail_websiteValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textIsSelectable="true"
                android:layout_weight="1"
                android:textSize="22sp"
                android:padding="2dp"    />



            <Space
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize" />

            <TableRow>

                <TextView
                    android:id="@+id/tvPlaceDetail_placeIsLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvPlaceIsLabel"
                    android:textSize="28sp"
                    android:padding="2dp"/>

                <TextView
                    android:id="@+id/tvPlaceDetail_placeIsValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="28sp"
                    android:padding="2dp"    />

            </TableRow>

            <Space
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize" />

            <TextView
                android:id="@+id/tvPlaceDetail_weekdaysLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvWeekdaysLabel"
                android:textSize="28sp"
                android:padding="2dp"/>

            <TextView
                android:id="@+id/tvPlaceDetail_weekdaysValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="22sp"
                android:padding="2dp"    />



        </TableLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

    </LinearLayout>

</LinearLayout>