<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PlaceDetail">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:elevation="@dimen/elevation_appBar"
            android:fitsSystemWindows="true">

            <android.support.design.widget.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                android:fitsSystemWindows="true">

                <ImageView
                    android:id = "@+id/imgPlaceImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/contentLocationImage"
                    android:fitsSystemWindows="true"/>

                <android.support.v7.widget.Toolbar
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_gravity="bottom"
                    app:layout_collapseMode="pin"
                    android:background="@android:drawable/screen_background_dark_transparent">

                    <LinearLayout
                        android:id="@+id/meta_bar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvPlaceName_OnMetaToolBar"
                            style="?android:attr/textAppearanceLarge"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:lineSpacingMultiplier="0.9"
                            android:paddingBottom="4dp"
                            android:text="@string/default_place_title"
                            android:textColor="@color/white"
                            android:textSize="28dp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </android.support.v7.widget.Toolbar>



            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <include layout="@layout/fragment_place_detail_nested_scrollview_content"/>

        </android.support.v4.widget.NestedScrollView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btnFabShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="@dimen/elevation_fab"
            android:src="@drawable/outline_share_black_48"
            app:layout_anchor="@id/appBar"
            android:contentDescription="@string/contentMakeFavorite"
            android:nextFocusDown="@id/btnFav"
            app:layout_anchorGravity="bottom|end" />

    </android.support.design.widget.CoordinatorLayout>

</FrameLayout>